# AAIMS

./: .gitignore  AccountLoginDialog.cpp  AccountLoginDialog.h  AccountManager.cpp  AccountManager.h  AsyncJsonIO.h  CMakeLists.txt  DataStructures.h  FileManager.h  LICENSE  LessonManager.h  MainWindow.cpp  MainWindow.h  README.md  README_CN.md  RatingManager.h  StyledDialog.cpp  StyledDialog.h  account_manager.h  connection.h  data_structures.h  file_manager.h  lesson_manager.h  main.cpp  manifest.xml  oobeDialog.cpp  oobeDialog.h  package.nsi  rating_manager.h  resources.qrc  sha256util.h
.github/workflows/: auto-sync-gitee.yml
Server/: CMakeLists.txt  account_manager.h  config_manager.h  connection.h  data_structures.h  file_manager.h  lesson_manager.h  main.cpp  network_manager.cpp  network_manager.h  rating_manager.h
assets/: style.qss
dialogs/: AccountLoginDialog.cpp  AccountLoginDialog.h  AddClassDialog.cpp  AddClassDialog.h  AddCourseDialog.cpp  AddCourseDialog.h  AddDepartmentDialog.cpp  AddDepartmentDialog.h  AddStudentDialog.cpp  AddStudentDialog.h  AddTeacherDialog.cpp  AddTeacherDialog.h  ClassDetailDialog.cpp  ClassDetailDialog.h  StudentDetailDialog.cpp  StudentDetailDialog.h  TeacherDetailDialog.cpp  TeacherDetailDialog.h  oobeDialog.cpp  oobeDialog.h
managements/: AccountManager.cpp  AccountManager.h  ClassManager.cpp  ClassManager.h  CourseManager.cpp  CourseManager.h  LessonManager.h  RatingManager.h
pages/: AdminClassPage.cpp  AdminClassPage.h  AdminCoursePage.cpp  AdminCoursePage.h  AdminDashboardPage.cpp  AdminDashboardPage.h  AdminStudentPage.cpp  AdminStudentPage.h  AdminTeacherPage.cpp  AdminTeacherPage.h  ClassPage.cpp  ClassPage.h  StudentPage.cpp  StudentPage.h  TeacherClassPage.cpp  TeacherClassPage.h  TeacherPage.cpp  TeacherPage.h
pages/components/: DistributionRing.cpp  DistributionRing.h  StatCard.cpp  StatCard.h  TimeSlot.cpp  TimeSlot.h  TimetableWidget.cpp  TimetableWidget.h
pages/delegate/: OperationDelegate.cpp  OperationDelegate.h  StatusBadgeDelegate.cpp  StatusBadgeDelegate.h  TeacherOperationDelegate.cpp  TeacherOperationDelegate.h
pages/model/: ClassTableModel.h  CourseTableModel.h  FilterProxyModel.h  StudentTableModel.h  TeacherTableModel.h
utils/: AsyncJsonIO.h  DataStructures.h
